force-app/main/default/objects/SimilarProject__c/SimilarProject__c.object-meta.xml
<CustomObject>
    <label>相似项目</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>相似项目</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>