force-app/main/default/objects/SimilarProject__c/fields/ChanelPartner__c.field-meta.xml
<CustomField>
    <fullName>ChanelPartner__c</fullName>
    <formula>Project__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>经销商</label>
    <type>Text</type>
</CustomField>