force-app/main/default/objects/SimilarProject__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <label>工厂</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCEC</fullName>
            </value>
            <value>
                <fullName>DCEC</fullName>
            </value>
            <value>
                <fullName>RMEP</fullName>
            </value>
            <value>
                <fullName>DAV</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>