force-app/main/default/objects/SimilarProject__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>机型</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>相似项目</relationshipLabel>
    <relationshipName>SimilarProduct3Xnz</relationshipName>
    <type>Lookup</type>
</CustomField>