force-app/main/default/objects/SimilarProject__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>项目</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>相似项目</relationshipLabel>
    <relationshipName>SimilarProjectnF78</relationshipName>
    <type>Lookup</type>
</CustomField>