force-app/main/default/objects/SimilarProject__c/fields/ProjectNo__c.field-meta.xml
<CustomField>
    <fullName>ProjectNo__c</fullName>
    <formula>Project__r.ProjectNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>申报编号</label>
    <type>Text</type>
</CustomField>