force-app/main/default/objects/SimilarProject__c/fields/ProjectStage__c.field-meta.xml
<CustomField>
    <fullName>ProjectStage__c</fullName>
    <formula>TEXT(Project__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>阶段</label>
    <type>Text</type>
</CustomField>