force-app/main/default/objects/SimilarProject__c/fields/SimilarProjectGroup__c.field-meta.xml
<CustomField>
    <fullName>SimilarProjectGroup__c</fullName>
    <label>相似项目组</label>
    <referenceTo>SimilarProjectGroup__c</referenceTo>
    <relationshipLabel>相似项目</relationshipLabel>
    <relationshipName>SimilarProjectQMBc</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>